infiniselect.css
/**** Wrapper ****/

.infiniselect-wrapper,
.infiniselect-dropdown-wrapper {
    border: 1px solid #b8b8b8;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05), inset 0 1px 0 rgba(255, 255, 255, 0.8);
}

.infiniselect-wrapper {
    padding: 8px;
    cursor: pointer;
    position: relative;
    background: #f9f9f9;
}


.infiniselect-wrapper.infiniselect-wrapper-open {
    background: #ffffff;
    border-bottom-color: #EBEBEB;
}

.infiniselect-wrapper:after {
    position: absolute;
    top: 50%;
    right: 15px;
    display: block;
    width: 0;
    height: 0;
    margin-top: -3px;
    border-color: #808080 transparent transparent transparent;
    border-style: solid;
    border-width: 5px 5px 0 5px;
    content: ' ';
}

.infiniselect-wrapper.infiniselect-wrapper-open:after {
    margin-top: -4px;
    border-color: transparent transparent #808080 transparent;
    border-width: 0 5px 5px 5px;
}

/**** Search ****/

.infiniselect-search {
    width: 99%;
    border: 0;
    background: transparent;
    cursor: pointer;
}

.infiniselect-search:focus {
    outline: none !important;
}

/**** Dropdown ****/

.infiniselect-dropdown-wrapper {
    display: none;
    border-top-width: 0px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
    position: absolute;
}

.infiniselect-dropdown-wrapper.infiniselect-dropdown-open {
    display: block;
}

/**** Rows ****/

.infiniselect-dropdown-row {
    padding: 5px;
    cursor: pointer;
    user-select: none;
}

.infiniselect-dropdown-row:nth-child(even) {
    background-color: #F0F0F0;
}

.infiniselect-dropdown-row:nth-child(odd) {
    background-color: #FFFFFF;
}

.infiniselect-dropdown-row:hover {
    background-color: #EEFFFF;
}

.infiniselect-dropdown-row.infiniselect-dropdown-row-selected {
    /*background-color: #A2EAFF;*/
    background-color: #1167bd;
    color:#fff;
}

.infiniselect-dropdown-row.infiniselect-dropdown-row-selected:hover {
    background-color: #88D0F3;
}

/**** Actions ****/

.infiniselect-dropdown-actions {
    border-bottom: 1px solid #EBEBEB;
}

.infiniselect-dropdown-action {
    color: #292b2c;
    background-color: #fff;
    border: none;
    border-right: 1px solid #ccc;
    padding: 8px;
    cursor: pointer;
    width: 33.33%;
}

.infiniselect-dropdown-action:last-child {
    border-right: none;
}

.infiniselect-dropdown-action:hover {
    color: #292b2c;
    background-color: #e6e6e6;
}

.infiniselect-dropdown-action:disabled {
    cursor: not-allowed;
}

.infiniselect-dropdown-action:focus {
    outline: none !important;
}

@media only screen and (max-width: 1024px) {

   .infiniselect-dropdown-show-selected {
    width: 39% !important; 
  }

  .infiniselect-dropdown-select-all {
    width: 20% !important;
  }

  .infiniselect-dropdown-select-none {
    width: 33% !important;
  }
}

.infiniselect-dropdown-open {
    position: absolute !important;
}

